jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #  annotations:
  #    deployment.kubernetes.io/revision: "152"
  #    meta.helm.sh/release-name: jenkins
  #    meta.helm.sh/release-namespace: default
  labels:
    app: jenkins-label
    app.kubernetes.io/managed-by: Helm
  name: jenkins
  namespace: jenkins
spec:
  minReadySeconds: 50
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins-label
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jenkins-label
      name: jenkins
    spec:
      containers:
      - image: jenkins/jenkins
        imagePullPolicy: Always
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 900m
            memory: 900Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: persistent-storage
          mountPath: /var/jenkins_home
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: efs-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
