jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  #  annotations:
  #    meta.helm.sh/release-name: jenkins
  #    meta.helm.sh/release-namespace: default
  labels:
    app: jenkins-label
    app.kubernetes.io/managed-by: Helm
  name: jenkins
  namespace: jenkins
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins-label
  sessionAffinity: None
  type: ClusterIP
